welcome.lessons.welcome.array.has271.Has271.scala.error
has271:24: error: not found: value +
    case (c+2) => true
           ^has271:25: error: not found: value +
    case (c+1) =>true
           ^has271:27: error: not found: value -
    case (c-1) => true
           ^has271:28: error: not found: value -
    case (c-2) => true
           ^